<resources>
    <string name="app_name">Check-In</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adjust_check_in_proximity">Adjust check-in proximity</string>
    <string name="set_parameters_descr">Set the check-in parameters. You\'ll be notified of entrance and exit events</string>
    <string name="define_the_radius">Define the radius</string>
    <string name="set_time">Set the tracking time duration. You\'ll be notified when the time is over.</string>
    <string name="adjust_time">Adjust check-in time</string>
    <string name="sample_location_txt">Joyner Library</string>
    <string name="from_time">%1$s, %2$d @ 9:30 AM</string>
    <string name="to_time">%1$s, %2$d @ 10:30 AM</string>
    <string name="set_timer">Set Timer</string>
    <string name="course_name">Public Speaking</string>
    <string name="professor_name">Professor Richard</string>
    <string name="map_content_description">Course Map</string>
    <string name="course_room">Room 3181</string>
    <string name="set_radius">Set Radius</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="btn_cont">Continue</string>
    <string name="set_to_meters">Radius in Square Meters</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="dialog_message">Set the duration of the location tracker.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Set Time</string>
    <string name="timer_text_hint">35</string>
    <string name="timer_seconds">Seconds</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
</resources>
