<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".views.activities.RadiusActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_setradius"
        style="@style/style_cardview_info"
        android:layout_width="330dp"
        android:layout_marginTop="31dp"
        app:layout_constraintBottom_toTopOf="@+id/seekbar_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/map_content_description"
            android:src="@drawable/iv_library_proto" />

        <TextView
            android:id="@+id/tv_meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/bahnscrift"
            android:text="@string/set_to_meters"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/bahnscrift"
            android:text="@string/course_room"
            android:textColor="#707070"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_gravity="end"/>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/seekbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        app:isb_indicator_color="@color/colorAccent"
        app:isb_progress="0"
        app:isb_show_indicator="rectangle"
        app:isb_show_tick_marks_type="divider"
        app:isb_thumb_color="@color/colorAccent"
        app:isb_tick_marks_color="#FFFFFFFF"
        app:isb_ticks_count="5"
        app:isb_track_background_size="4dp"
        app:isb_track_progress_color="@color/colorAccent"
        app:isb_track_progress_size="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cont_radius" />

    <Button
        android:id="@+id/btn_cont_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_background_fill"
        android:text="@string/btn_cont"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>