<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkdate_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AdjustCheckInTimeFragment">


    <TextView
        android:id="@+id/tv_adjust_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnscrift"
        android:text="@string/adjust_time"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_prox_desrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bahnscrift"
        android:text="@string/set_time"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_adjust_proximity" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:src="@drawable/iv_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prox_desrc" />

    <TextView
        android:id="@+id/tv_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/bahnscrift"
        android:text="Public Speaking"
        android:textColor="@color/colorDarkGray"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_prof_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/bahnscrift"
        android:text="Professor Richard"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_course_name" />

    <TextView
        android:id="@+id/tv_define_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/bahnscrift"
        android:text="@string/sample_location_txt"
        android:textColor="@color/colorDarkYellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_checkin_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/btn_background"
        android:text="Set Date"
        android:textColor="#FFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_define_radius"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/tv_define_radius" />

    <TextView
        android:id="@+id/from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:fontFamily="@font/bahnscrift"
        android:text="From"
        android:textAlignment="center"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_define_radius"
        app:layout_constraintStart_toEndOf="@+id/tv_define_radius" />

    <TextView
        android:id="@+id/from_date_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="17dp"
        android:fontFamily="@font/bahnscrift"
        android:text="Aug, 7 @ 9:30 AM"
        android:textAlignment="center"
        android:textColor="@color/colorDarkYellow"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_define_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/from_date" />

    <TextView
        android:id="@+id/to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bahnscrift"
        android:text="To"
        android:textAlignment="center"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/from_date"
        app:layout_constraintTop_toBottomOf="@id/from_date" />

    <TextView
        android:id="@+id/to_date_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnscrift"
        android:text="Aug, 7 @ 9:30 AM"
        android:textAlignment="center"
        android:textColor="@color/colorDarkYellow"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/to_date"
        app:layout_constraintStart_toStartOf="@+id/from_date_calender" />

</androidx.constraintlayout.widget.ConstraintLayout>